change login leftside color

--- a/css/atiehno.css
+++ b/css/atiehno.css
@@ -22,13 +22,13 @@
     width: 39%;
     height: 100%;
     background: #527ef8;
-    background: -webkit-linear-gradient(top, #09a174e7, #24c0b8e7, #b28dd4);
+    background: -webkit-linear-gradient(top, #078f66e7, #24c0b8e7, #5f98aa);
     color: white;
     text-align: center;
 }
 
 .leftside-top {
-    border-radius: 2%;
+    border-radius: 10px;
     overflow: hidden;
     width: 100%;
     height: 100%;
@@ -112,12 +112,11 @@ input:focus {
 }
 
 .login-button button {
-    border-radius: 50px;
+    border-radius: 5px;
     background-color: #2fac4ee7;
 }
 
 .login-button button:hover, .login-button button:active, .login-button button:focus {
-    border-radius: 50px;
     background-color: #318144e7 !important;
 }
 
