--- a/css/global.css
+++ b/css/global.css
@@ -102,7 +102,10 @@ header nav ul li a:hover, .subnav-content a:hover, .subnav-btn:hover {
     color: white;
     line-height: 3;
 }
-
+.green-nav
+{
+    height: 49px;
+}
 .info {
     width: 20%;
     text-align: right;
@@ -250,7 +253,7 @@ header nav ul li a:hover, .subnav-content a:hover, .subnav-btn:hover {
 }
 
 .navbar-bottom {
-    padding-top: 5vh;
+    height: auto;
     line-height: 2.5;
     font-size: 15px;
     text-align: center;
@@ -336,12 +339,13 @@ header nav ul li a:hover, .subnav-content a:hover, .subnav-btn:hover {
 }
 
 /* footer */
-
+footer{
+    height: auto;
+}
 .footer {
     position: relative;
     background-color: white;
     box-shadow: 0px -2px 5px #aaaaaac0;
-    position: absolute;
     width: 100%;
     bottom: 0;
     z-index: 0;
@@ -517,8 +521,8 @@ header nav ul li a:hover, .subnav-content a:hover, .subnav-btn:hover {
         max-width: 100% !important;
         font-size: 12px;
     }
-    header {
-        display: flex;
+    .green-nav {
+        height: auto;
     }
     nav {
         order: 3;
