--- a/css/dorsasam.css
+++ b/css/dorsasam.css
@@ -29,6 +29,7 @@
 }
 .edit_buttons{
     width: 100%;
+    height: 50px;
     display: inline-block;
     color : black;
     border-width: 0px;
@@ -131,4 +132,8 @@ footer{
     position: absolute;
     width: 100%;
     bottom: 0;
+}
+.nav-btns
+{
+    padding-left: 100px !important;
 }
