--- a/pages/manage/manageUsers.css
+++ b/pages/manage/manageUsers.css
@@ -2,3 +2,20 @@
 {
     padding-left : 100px !important;
 }
+.caseStatusSelect, .assigneSelect {
+    width: 100%;
+}
+
+.attempedButtons .btn {
+    width: 100%;
+}
+
+.card-body .row {
+    margin-bottom: 20px;
+}
+
+footer {
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
